--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -26,8 +26,9 @@
 @import "animation";
 @import "animation/animate";
 //SPRITING
-@import "layout/*.png";
-@import "benefits_list/*.png";
+@import "sprites/layout/*.png";
+@import "sprites/benefits_list/*.png";
+@import "sprites/tabsNav/*.png";
 
 
 //border-box-sizing for all elems
@@ -578,6 +579,7 @@ body {
     margin-left: -480px;
     top:100%;
   }
+  &.m-no_bottom_shadow:before{display: none;}
   ul{@include hList;}
   .item{
     text-transform: uppercase;
@@ -763,7 +765,7 @@ body {
       width:2px;
       @include border-radius(0 50% 50% 0);
       background-color: #eee;
-      right:0;
+      right:-20px;
       top:0;
     }
   }
@@ -873,10 +875,69 @@ body {
   }
 }
 
-/*SOME page specific elements styles
+/*INFO page specific elements styles
 ------------------------------------------------------------------------------------------------*/
-
-
+.page-info{}
+.b-tabsNav{
+  background-color: #E81363;
+  @include ie9-gradient-support;
+  @include filter-gradient(#F31A85, #DB0F4E, vertical);
+  @include background-image(linear-gradient(top,  rgba(243,26,133,1) 2%,rgba(232,19,99,1) 4%,rgba(219,15,78,1) 7%, rgb(213, 12, 67) 9%,rgba(208,9,64,1) 26%,rgba(205,11,64,1) 30%,rgba(206,9,63,1) 35%,rgba(187,3,53,1) 76%,rgba(183,0,49,1) 96%,rgba(170,0,41,1) 98%));
+  padding-bottom: 5px;
+  position: relative;
+  z-index: 1;
+  margin-bottom: 15px;
+  &:before{
+    @include pseudoBlockAbs;
+    background: url(../images/shadow-content_top.png);
+    width:960px;
+    height: 120px;
+    left:50%;
+    margin-left: -480px;
+    bottom:-130px;
+  }
+  ul{
+    @include hList;
+    background: #fff;
+  }
+  .item{
+    margin-bottom: 5px;
+    font-size: 12px;
+    text-transform: uppercase;
+    @include link-simple-colors(#fff,#fff);
+    text-shadow: 0 -1px 1px rgba(0,0,0,.39);
+    display: block;
+    width:190px;
+    text-align: center;
+    @include ie9-gradient-support;
+    background-color: rgb(213,209,208);
+    @include filter-gradient(#d5d1d0, #747474, vertical);
+    @include background-image(linear-gradient(top,  rgba(213,209,208,1) 0%,rgba(192,188,187,1) 2%,rgba(175,171,170,1) 5%,rgba(166,162,161,1) 7%,rgba(159,155,154,1) 32%,rgba(137,137,137,1) 77%,rgba(132,132,132,1) 98%,rgba(116,116,116,1) 100%));
+    @include hList;
+    @include border-radius;
+    line-height: 47px;
+    &:before{
+      content: '';
+      @include inline-block;
+      position: relative;
+      top:-3px;
+      margin-right: 8px;
+    }
+    &.item-1:before{
+      @include tabsNav-sprite(tabNav-1);
+      width:37px; height: 38px;
+    }
+    &.item-2:before{@include tabsNav-sprite(tabNav-2);width:44px; height: 45px;top:0;}
+    &.item-3:before{@include tabsNav-sprite(tabNav-3);width:35px; height: 36px;}
+    &.active,&:hover,&:focus{
+      background-color: #E81363;
+      @include ie9-gradient-support;
+      @include filter-gradient(#F31A85, #DB0F4E, vertical);
+      @include background-image(linear-gradient(top,  rgba(243,26,133,1) 2%,rgba(232,19,99,1) 4%,rgba(219,15,78,1) 7%, rgb(213, 12, 67) 9%,rgba(208,9,64,1) 26%,rgba(205,11,64,1) 30%,rgba(206,9,63,1) 35%,rgba(187,3,53,1) 76%,rgba(183,0,49,1) 100%));
+    }
+    &.active{margin-bottom: 0;line-height: 52px;@include border-radius(5px 5px 0 0);}
+  }
+}
 /*SOME page specific elements styles
 ------------------------------------------------------------------------------------------------*/
 
